# RustyCalc

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  Trunk.toml  index.html  style.css  test_event_system.rs
.github/workflows/: pages.yml
docs/: adding-actions.md  building-components.md  leptos-patterns.md  performance-evaluation.md  rust-style-guide.md  state-and-events.md  testing-guide.md
ironcalc_xlsx/: Cargo.toml  hello-calc.xlsx  hello-styles.xlsx  widths-and-heights.xlsx
src/: action.rs  app.rs  app_state.rs  coord.rs  events.rs  formula_input.rs  main.rs  perf.rs  state.rs  storage.rs  storage_enhanced.rs  theme.rs  util.rs
src-tauri/: tauri.conf.json
src/canvas/: frontend_model.rs  frontend_types.rs  geometry.rs  mod.rs  renderer.rs  types.rs
src/components/: cell_editor.rs  color_picker.rs  color_picker_enhanced.rs  context_menu.rs  file_bar.rs  formula_bar.rs  header_context_menu.rs  inline_rename.rs  left_drawer.rs  mod.rs  perf_panel.rs  sheet_tab_bar.rs  status_bar.rs  toolbar.rs  toolbar_optimized.rs  workbook.rs  worksheet.rs
src/input/: action.rs  edit.rs  error.rs  format.rs  formula_input.rs  helpers.rs  keyboard.rs  mod.rs  mouse.rs  nav.rs  sheet.rs  structure.rs  workbook.rs  xlsx_io.rs
src/model/: clipboard_bridge.rs  frontend_model.rs  frontend_types.rs  mod.rs  style_types.rs
styles/: README.md  cell-editor.css  color-picker.css  context-menu.css  file-bar.css  formula-bar.css  index.css  layout.css  left-drawer.css  perf-panel.css  sheet-tabs.css  status_bar.css  toolbar.css  worksheet.css
