[package]
name = "rusty-calc"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
ironcalc_base = { git = "https://github.com/CoalUnicorn/IronCalc",branch = "fix-col-iterations", features = ["use_regex_lite"] }
ironcalc = { path = "ironcalc_xlsx" }
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "HtmlElement",
    "CanvasRenderingContext2d", "TextMetrics", "Element",
    "KeyboardEvent", "MouseEvent", "WheelEvent",
    "Clipboard", "Navigator",
    "HtmlInputElement", "HtmlTextAreaElement",
    "Crypto", "DomStringMap", "Performance",
    "File", "FileList", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-storage = "0.3"
gloo-net = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
leptos-use = "0.15"
js-sys = "0.3"  # For enhanced storage date/time functions
thiserror = "1.0"  # For structured error types
codee = { version = "0.2", features = ["json_serde"] }
leptos_i18n = "0.6.1"
chrono = { version = "0.4", features =  ["serde", "wasmbind"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
#inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.leptos]
lib-profile-release = "wasm-release"
